[gd_scene load_steps=14 format=3 uid="uid://cmb10wy2q2gwf"]

[ext_resource type="Script" path="res://scripts/ui/menu/main_menu/main_menu.gd" id="1_jg0kq"]
[ext_resource type="Texture2D" uid="uid://d4fcmvqrftt7l" path="res://sprites/ui/menu/locations/brain_stem.png" id="2_tyiu0"]
[ext_resource type="Shader" path="res://resources/ui/global/shaders/vignettes/square_vignette.gdshader" id="3_bly2p"]
[ext_resource type="Texture2D" uid="uid://28rgyn3863sd" path="res://sprites/global/game_logo/game_logo.svg" id="4_fbhwm"]
[ext_resource type="PackedScene" uid="uid://bvughhmsw4fmq" path="res://scenes/ui/menu/settings_menu/settings_menu.tscn" id="7_3g0qb"]
[ext_resource type="PackedScene" uid="uid://dc8va7k7dhpvp" path="res://scenes/ui/menu/main_menu/buttons/main_menu_button.tscn" id="7_tnqy7"]
[ext_resource type="Texture2D" uid="uid://b5klt3j1kx01" path="res://sprites/ui/base/selected_arrow/selected_arrow.svg" id="8_5d7et"]
[ext_resource type="AudioStream" uid="uid://c7d8f6gcv70rc" path="res://music/story/main_menu.mp3" id="8_cua4s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j42ep"]
shader = ExtResource("3_bly2p")
shader_parameter/color = Color(0.0392157, 0.0392157, 0.0392157, 1)
shader_parameter/size = 0.3

[sub_resource type="Gradient" id="Gradient_1p2tm"]
offsets = PackedFloat32Array(0.13, 0.45, 0.75)
colors = PackedColorArray(0.0392157, 0.0392157, 0.0392157, 0.94902, 0.0392157, 0.0392157, 0.0392157, 1, 0.0392157, 0.0392157, 0.0392157, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rhdo6"]
gradient = SubResource("Gradient_1p2tm")

[sub_resource type="Gradient" id="Gradient_fd8p4"]
offsets = PackedFloat32Array(0, 0.2, 0.704268, 0.72561, 0.75, 0.777439, 0.8, 1)
colors = PackedColorArray(0.266667, 0.294118, 0.345098, 0, 0.266667, 0.294118, 0.345098, 1, 0.266667, 0.294118, 0.345098, 1, 0.960784, 0.960784, 0.960784, 1, 0.960784, 0.960784, 0.960784, 1, 0.266667, 0.294118, 0.345098, 1, 0.266667, 0.294118, 0.345098, 1, 0.266667, 0.294118, 0.345098, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k42to"]
gradient = SubResource("Gradient_fd8p4")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jg0kq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 1)
metadata/_edit_lock_ = true

[node name="LastLocation" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(1080, 0)
layout_mode = 1
anchor_left = 0.437
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.959961
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="Location" type="TextureRect" parent="LastLocation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_tyiu0")

[node name="Vignette" type="ColorRect" parent="LastLocation"]
visible = false
material = SubResource("ShaderMaterial_j42ep")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ShadowBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture1D_rhdo6")

[node name="GameLogo" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 128.0
offset_top = 138.0
offset_right = 1117.0
offset_bottom = 387.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("4_fbhwm")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 128.0
offset_top = 1007.0
offset_right = 190.0
offset_bottom = 1028.0
size_flags_horizontal = 0
size_flags_vertical = 10
text = "v.0.0.2a"

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 624

[node name="Menu" type="VBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 20

[node name="PlayButton" parent="Main/Menu" instance=ExtResource("7_tnqy7")]
layout_mode = 2
text = "PLAY"

[node name="Button" parent="Main/Menu/PlayButton/Margin" index="0"]
theme_override_font_sizes/font_size = 32

[node name="VBox" type="VBoxContainer" parent="Main/Menu"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="SettingsButton" parent="Main/Menu/VBox" instance=ExtResource("7_tnqy7")]
layout_mode = 2
text = "SETTINGS"

[node name="ExitButton" parent="Main/Menu/VBox" instance=ExtResource("7_tnqy7")]
layout_mode = 2
text = "EXIT"

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 1)
layout_mode = 0
offset_left = 82.0
offset_top = 558.0
offset_right = 382.0
offset_bottom = 559.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_k42to")

[node name="TextureRect2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(6, 12)
layout_mode = 0
offset_left = 82.0
offset_top = 774.0
offset_right = 88.0
offset_bottom = 786.0
texture = ExtResource("8_5d7et")
expand_mode = 1

[node name="MainShadow" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 1)
metadata/_edit_lock_ = true

[node name="SettingsMenu" parent="." instance=ExtResource("7_3g0qb")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_cua4s")
volume_db = -10.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Main/Menu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Main/Menu/VBox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Main/Menu/VBox/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="menu_closed" from="SettingsMenu" to="." method="_on_settings_menu_closed"]

[editable path="Main/Menu/PlayButton"]
